[gd_scene load_steps=10 format=3 uid="uid://coxcookmq1aux"]

[ext_resource type="Script" path="res://code/card.gd" id="1_mawm2"]
[ext_resource type="Texture2D" uid="uid://3knhrnaddy5g" path="res://ressources/image/card_images/empty_card.png" id="2_iel1q"]
[ext_resource type="Texture2D" uid="uid://ly6aywjacpj1" path="res://ressources/image/card_images/mana.png" id="3_35n4b"]
[ext_resource type="FontFile" uid="uid://b2s8qpl64yl0o" path="res://ressources/font/dpcomic.ttf" id="3_bh7wa"]
[ext_resource type="Texture2D" uid="uid://cdof04de7wohc" path="res://ressources/image/card_images/Trollface_non-free.png" id="5_oek1f"]

[sub_resource type="LabelSettings" id="LabelSettings_66a52"]
font = ExtResource("3_bh7wa")
font_size = 62
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_wir1n"]
font = ExtResource("3_bh7wa")
font_size = 62
font_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_0htto"]
default_font_size = 31

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxawd"]
size = Vector2(340, 427)

[node name="Card" type="Node2D"]
script = ExtResource("1_mawm2")

[node name="BaseCardSprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(3.3, 3)
texture = ExtResource("2_iel1q")

[node name="CostDisplay" type="Node2D" parent="."]
position = Vector2(149, -220)

[node name="CardCostSprite" type="Sprite2D" parent="CostDisplay"]
position = Vector2(8.5625, -12.4375)
scale = Vector2(4.05357, 4.05357)
texture = ExtResource("3_35n4b")

[node name="CardCostLabel" type="Label" parent="CostDisplay"]
offset_left = -14.4375
offset_top = -44.4375
offset_right = 41.5625
offset_bottom = 11.5625
text = "99"
label_settings = SubResource("LabelSettings_66a52")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CardName" type="Node2D" parent="."]
position = Vector2(0, -113)

[node name="CardNameLabel" type="Label" parent="CardName"]
offset_left = -148.0
offset_top = -80.0
offset_right = 148.0
offset_bottom = 35.0
text = "Trolled"
label_settings = SubResource("LabelSettings_wir1n")
horizontal_alignment = 1
autowrap_mode = 3

[node name="CardText" type="Node2D" parent="."]
position = Vector2(-135, 32)

[node name="CardTextLabel" type="RichTextLabel" parent="CardText"]
offset_left = -8.0
offset_top = 40.0
offset_right = 277.0
offset_bottom = 140.0
auto_translate = false
localize_numeral_system = false
mouse_filter = 1
mouse_force_pass_scroll_events = false
theme = SubResource("Theme_0htto")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_bh7wa")
text = "You have been trolled"
scroll_active = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="CardImage" type="Node2D" parent="."]
position = Vector2(0, -14)

[node name="Sprite2D" type="Sprite2D" parent="CardImage"]
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_oek1f")

[node name="CardArea" type="Area2D" parent="."]

[node name="CardCollisionBox" type="CollisionShape2D" parent="CardArea"]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_xxawd")

[connection signal="mouse_entered" from="CardArea" to="." method="_on_card_area_mouse_entered"]
[connection signal="mouse_exited" from="CardArea" to="." method="_on_card_area_mouse_exited"]
